# partitura

./: .gitignore  .markdownlint.json  .readthedocs.yml  CHANGES.md  CHANGES.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  TODO.md  pyproject.toml  requirements.txt  setup.py  test.musicxml
.devcontainer/: devcontainer.json
.github/workflows/: close-label.yml  linting.yml  partitura_unittests.yml  pypi_publish.yml  stale.yml
docs/: conf.py  index.rst  introduction.rst  requirements.txt  usage.rst
docs/Tutorial/: notebook.ipynb
docs/modules/: partitura.musicanalysis.rst  partitura.rst  partitura.score.rst  partitura.utils.rst
docs/source/: api.rst  conf.py  index.rst  introduction.rst
docs/source/Tutorial/: notebook.ipynb
docs/source/modules/: partitura.musicanalysis.rst  partitura.performance.rst  partitura.score.rst
ofaiutils/: __init__.py
ofaiutils/data_handling/: __init__.py  annotation_parser.py  matchfile.py  midi.py  musicxml.py  musicxmlcleaning.py  scoreontology.py  sparse_datafiles.py  sparse_feature_extraction.py  wormfile.py
ofaiutils/utils/: __init__.py  container_utils.py  data_utils.py  lang_utils.py  net_utils.py  os_utils.py  string_utils.py  task_processing_pool.py
partitura/: __init__.py  _ply_directions.py  directionparser.py  directions.py  display.py  exportmidi.py  exportmusicxml.py  importmatch.py  importmidi.py  importmusicxml.py  instrument_assignment.py  match.py  matchfile.py  midi.py  musicxml.py  musicxmlold.py  performance.py  score.py  utils.py
partitura.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
partitura/assets/: mei.rng  score_example.krn  score_example.mei  score_example.mid  score_example.musicxml
partitura/io/: __init__.py  exportaudio.py  exportkern.py  exportmatch.py  exportmatch_new.py  exportmei.py  exportmei_proto.py  exportmidi.py  exportmusicxml.py  exportparangonada.py  importdcml.py  importkern.py  importkern_v2.py  importmatch.py  importmatch_new.py  importmei.py  importmidi.py  importmusic21.py  importmusicxml.py  importnakamura.py  importnakamura_v2.py  importparangonada.py  importpdmx.py  importrntxt.py  matchfile_base.py  matchfile_fields.py  matchfile_utils.py  matchlines_1_0_0.py  matchlines_v0.py  matchlines_v1.py  mei_export_v2.py  musescore.py  test.mid  test.py  testResult.mei  testSite.html
partitura/music_utils/: __init__.py
partitura/music_utils/key_identification/: krumhansl_shepard.py
partitura/music_utils/pitch_spelling/: ps13.py
partitura/music_utils/voice_separation/: _vs_utils.py  score_representation.py  vosa.py
partitura/musicanalysis/: __init__.py  key_identification.py  meter.py  note_array_to_part.py  note_array_to_score.py  note_features.py  performance_codec.py  performance_expressions.py  performance_features.py  pitch_spelling.py  tonal_tension.py  utils.py  voice_separation.py
partitura/musicanalysis/key_identification/: __init__.py  _kid_utils.py
partitura/musicanalysis/pitch_spelling/: __init__.py  ps13.py
partitura/tokenizer/: __init__.py  constants.py  midi2audio.py  remi.py  utils.py
partitura/utils/: __init__.py  fluidsynth.py  generic.py  globals.py  graph.py  misc.py  music.py  normalize.py  synth.py
tests/: __init__.py  temp_test.py  test.ipynb  test_basis_functions.py  test_clef.py  test_cross_staff.py  test_cross_staff_beaming.py  test_dcml_import.py  test_deprecations.py  test_display.py  test_fluidsynth.py  test_harmony.py  test_iter.py  test_kern.py  test_key_estimation.py  test_load_performance.py  test_load_score.py  test_m21_import.py  test_match_export.py  test_match_import.py  test_match_import_new.py  test_matchfile.py  test_mei.py  test_mei_import.py  test_merge_parts.py  test_metrical_position.py  test_metrical_salience.py  test_midi_export.py  test_midi_import.py  test_midi_io.py  test_musescore.py  test_nakamura.py  test_nakamura_v2.py  test_new_divs.py  test_note_array.py  test_note_features.py  test_octave_shift.py  test_parangonada.py  test_part_properties.py  test_partial_measures.py  (+19 more)
tests/data_examples/: Three-Part_Invention_No_13_(fragment).xml  test_basic_midi.musicxml
(+112 files in other folders)
