[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "partitura"
version = "1.7.1"
description = "A package for handling symbolic musical information"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.7"
license = { text = "Apache 2.0" }

authors = [
    { name = "Maarten Grachten" },
    { name = "Carlos Cancino-Chacón" },
    { name = "Silvan Peter" },
    { name = "Emmanouil Karystinaios" },
    { name = "Francesco Foscarin" },
    { name = "Thassilo Gadermaier" },
    { name = "Patricia Hu" },
]

maintainers = [
    { email = "partitura-users@googlegroups.com" }
]

keywords = ["music", "notation", "musicxml", "midi"]

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "numpy",
    "scipy",
    "lxml",
    "lark-parser",
    "xmlschema",
    "mido",
    "importlib_metadata; python_version < '3.8'",
    "importlib_resources; python_version < '3.9'",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "nbsphinx",
    "music21==8.3.0",
    "Pillow==9.5.0",
    "musescore==0.0.1",
    "miditok==2.0.6",
    "tokenizers==0.13.3",
    "pandas==2.0.3",
]
all = [
  "nbsphinx",
  "torch",
  "pyfluidsynth",
  "pytest",
  "black",
  "music21==8.3.0",
  "Pillow==9.5.0",
  "musescore==0.0.1",
  "miditok==2.0.6",
  "tokenizers==0.13.3",
  "pandas==2.0.3",
]

[project.urls]
Homepage = "https://github.com/CPJKU/partitura"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools.package-data]
partitura = [
    "assets/musicxml.xsd",
    "assets/score_example.mid",
    "assets/score_example.musicxml",
    "assets/score_example.krn",
    "assets/score_example.mei",
]
